<resources>
    <string name="app_name">알바 매니져</string>
    <string name="title_regi_alba">알바 등록</string>

    <string name="title_section1">스케쥴</string>
    <string name="title_section2">급여</string>
    <string name="title_section3">알바 등록</string>

    <string name="navigation_drawer_open">메뉴 열기</string>
    <string name="navigation_drawer_close">메뉴 닫기</string>

    <!-- 알바 등록-->
    <string name="regialba_text_view_insert_albla">알바 추가</string>
    <string name="regialba_button_cancel">취소</string>
    <string name="regialba_button_excute">추가</string>
    <string name="regialba_color_title">색상 선택</string>


    <!-- Toast-->
    <string name="toast_no_alba_at_list">입력된 정보가 없습니다</string>
    <string name="toast_alba_insert">아르바이트가 등록 되었습니다</string>
    <string name="toast_alba_update">아르바이트 정보가 수정 되었습니다</string>
    <string name="toast_alba_delete">아르바이트 정보가 삭제 되었습니다</string>
    <string name="toast_no_name_at_edit_text">이름을 입력해 주세요</string>
    <string name="toast_no_pay_at_edit_text">시급을 입력해 주세요</string>
    <string name="toast_time_input_error">시작 시간은 종료 시간을 넘을 수 없습니다</string>
    <string name="toast_back_key">뒤로 버튼을 한번 더 누르시면 종료됩니다.</string>

    <!-- 임시-->
    <string name="alba_edit_hint_name">아르바이트 이름</string>
    <string name="alba_edit_hint_pay">시급</string>
    <string name="alba_edit_text_view_name">이름</string>
    <string name="alba_edit_text_view_color">색상</string>
    <string name="alba_edit_text_view_pay">시급</string>
    <string name="alba_edit_text_view_start_time">시작 시간</string>
    <string name="alba_edit_text_view_end_time">종료 시간</string>
    <string name="alba_edit_text_view_set_work_day">일정 입력</string>
    <string name="alba_edit_button_set_work_day">입력</string>



    <string name="settings_type_insert_title">신규 메모 유형</string>
    <string name="regi_alba_edit_insert_cancel">취소</string>
    <string name="regi_alba_edit_insert_execute">추가</string>
    <string name="regi_alba_edit_update_title">메모 유형 편집</string>
    <string name="regi_alba_edit_update_cancel">삭제</string>
    <string name="sregi_alba_edit_update_execute">수정</string>


    <!-- color picker-->
    <!-- About -->
    <string name="title_about">About</string>
    <string name="about_ok">OK</string>
    <string name="about_body"><![CDATA[
        <b>Colorpickercollection Library & Demo</b><br>
        Version %s<br><br>
        <a href="https://github.com/gabrielemariotti/colorpickercollection">Source</a><br><br>
        <a href="https://plus.google.com/114432517923423045208">By Gabriele Mariotti</a><br><br>

    ]]></string>
    <string name="title_activity_schedule">ScheduleActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pay">PayActivity</string>

    <!-- 삭제 예정-->
    <string name="title_activity_pay__dialog">Pay_Dialog</string>
    <string name="day_pay_text">일      급  :  </string>
    <string name="duty_check_text">근무확인 :  </string>
    <string name="day_month_text">월 일</string>

</resources>
