<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="alba_manager.albamanager.fragment.AlbaEditFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="75dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/alba_edit_text_view_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/albaEditNameEditText"
            android:layout_width="235dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:hint="@string/alba_edit_hint_name"
            android:maxLength="8"
            android:maxLines="1"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/alba_edit_text_view_color"
            android:textSize="16sp" />

        <Button
            android:id="@+id/albaEditButtonSetColor"
            android:layout_width="235dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="7dp"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="75dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/alba_edit_text_view_pay"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/albaEditPayEditText"
            android:layout_width="235dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:hint="@string/alba_edit_hint_pay"
            android:maxLength="8"
            android:maxLines="1"
            android:textSize="16sp"
            android:inputType="number" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/alba_edit_text_view_start_time"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/albaEditStartTimeTextView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/alba_edit_text_view_end_time"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/albaEditEndTimeTextView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/albaEditLinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/alba_edit_text_view_set_work_day"
            android:textSize="16sp" />

        <Button
            android:id="@+id/alblEditSetWorkDayButton"
            android:layout_width="235dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:text="@string/alba_edit_button_set_work_day"
            android:textSize="20sp" />


    </LinearLayout>

</LinearLayout>